# agentscript-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/agentscript-compiler/: Cargo.toml  build.rs
crates/agentscript-compiler/data/: builtins.json
crates/agentscript-compiler/src/: ast.rs  bindings.rs  compiler.rs  driver.rs  error.rs  lib.rs  main.rs  parser.rs  pipeline.rs  semantic.rs  session.rs  visitor.rs
crates/agentscript-compiler/src/codegen/: backend.rs  builtin_wasm_emit.rs  hir_wasm.rs  mod.rs  wasm.rs
crates/agentscript-compiler/src/codegen/wasm/: abi.rs  error.rs  minimal.rs  mod.rs
crates/agentscript-compiler/src/frontend/: mod.rs
crates/agentscript-compiler/src/frontend/ast/: assign_ids.rs  decl.rs  expr.rs  mod.rs  node.rs  stmt.rs  types.rs
crates/agentscript-compiler/src/frontend/parser/: assign_type.rs  expr.rs  leading_scan.rs  lex.rs  literals.rs  mod.rs  script.rs  version_policy.rs
crates/agentscript-compiler/src/hir/: ast_lower.rs  builtin.rs  expr.rs  financial.rs  ids.rs  literal.rs  lowering.rs  mod.rs  script.rs  security.rs  stmt.rs  symbols.rs  ty.rs
crates/agentscript-compiler/src/hir/snapshots/: agentscript_compiler__hir__ast_lower__tests__golden_block_user_function_body.snap  agentscript_compiler__hir__ast_lower__tests__golden_series_access_and_security_options.snap  agentscript_compiler__hir__ast_lower__tests__golden_ta_ema_indicator.snap  agentscript_compiler__hir__ast_lower__tests__golden_tiny_indicator_pipeline.snap  (+3 more)
crates/agentscript-compiler/src/parser/: assign_type.rs  expr.rs  leading_scan.rs  lex.rs  literals.rs  mod.rs  preflight.rs  script.rs  version_policy.rs
crates/agentscript-compiler/src/pipeline/: compiler_pipeline.rs  mod.rs
crates/agentscript-compiler/src/semantic/: builtin_registry.rs  builtins.rs  early.rs  loops.rs  mod.rs  resolve.rs
crates/agentscript-compiler/tests/: parse_smoke.rs  wasmtime_guest_instantiate.rs
crates/agentscript-compiler/tests/fixtures/: minimal_strategy.pine  tv_style_single_quote_strategy_slice.pine
(+50 files in other folders)
