[package]
name = "agentscript-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser and compiler front-end for AgentScript (QAS / Pine v6–aligned syntax); `.pine` and `.qas` sources."
build = "build.rs"

[features]
default = ["codegen-wasm"]
# Guest WASM v0 emitter (emit_hir_guest_wasm / GuestWasmV0).
codegen-wasm = []
# Reserved for an alternate code generator without changing the HIR pipeline.
codegen-alt = []

[build-dependencies]
serde_json = "1"

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
chumsky = "0.9"
indexmap = "2"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
wasm-encoder = "0.240"
wasmparser = "0.240"

[dev-dependencies]
insta = "1"
wasmtime = { version = "24", default-features = false, features = ["cranelift", "runtime"] }

[[bin]]
name = "agentscriptc"
path = "src/main.rs"
